# reposentinel

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
docs/: INSTALL.md  RELEASE_CHECKLIST.md  USAGE.md
reposentinel/: cli.py
tests/: test_reposentinel.py
